fixes bottom line alignment

--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -116,7 +116,7 @@ h5{
 h6{
   font-size: 9px;
   color: white;
-  padding: 25px 0;
+  padding: 25px 0 0 0;
 }
 footer {
   background-color:#121212;
